# bits3

./: AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-test.yml
src/bits3/: cli.py  core.py  utils.py
tests/: test_bits3.py
