[metadata]
name = bits3
description = Upload Backintime snapshots to AWS S3.
version = 0.1
author = Christoph Hille
author-email = hille721@gmail.com
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/hille721/bits3/
project-urls =
    Documentation = https://github.com/hille721/bits3/
platforms = Linux
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
install_requires =
    boto3
    click

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    bits3 = bits3.cli:run

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
